Initialize VMRegImpl::regName[] earlier to prevent assert during PrintStubCode

XMLWordPrintable

    • b15
    • generic
    • generic

        With -XX:+PrintStubCode, SharedRuntime::generate_stubs() fails with an assert deep down in VMRegImpl::print_on().

        Reason: some stubs have oop maps attached. Printing them requires the regName[] array to be initialized.

              Assignee:
              Lutz Schmidt
              Reporter:
              Lutz Schmidt
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: