8221482: Initialize VMRegImpl::regName[] earlier to prevent assert during PrintStubCode

Reviewed-by: kvn